# AssetOS-v5

./: .gitignore  ASSETOS_STRUCTURE.txt  README.md  pyproject.toml  requirements.txt
data/memory_template/asset/default/: Lease agreement.md.meta.json  lease agreement.md  profile.md
front_end/: README.md  __init__.py  server.py
front_end/static/: app.js  index.html  styles.css
src/: __init__.py
src/agent/: __init__.py  approval.py  journal.py  loop.py  prompt.py  scheduler.py  session.py
src/cli/: main.py  schedule.py
src/core/: __init__.py  config.py  constants.py  errors.py  text.py  types.py
src/llm/: __init__.py  client.py
src/llm/adapters/: __init__.py  codex.py  ollama.py
src/memory/: __init__.py  paths.py
src/memory/assets/: __init__.py  registry.py  writer.py
src/memory/facts/: __init__.py  fact_store.py  reader.py  registry.py  schema_store.py  writer.py
src/memory/files/: __init__.py  reader.py  registry.py  writer.py
src/memory/search/: __init__.py  indexer.py
src/memory/skills/: __init__.py  reader.py  registry.py  writer.py
src/outputs/: formatter.py
src/tools/: __init__.py  artifact_tools.py  base.py  calc_tool.py  fact_tools.py  memory_tools.py  registry.py  research_tools.py
src/tools/build_docx/: __init__.py  builder.py  renderer.py  tool.py  validators.py
tests/: test_agent_loop.py  test_approvals_and_scheduler.py  test_capabilities.py  test_codex_adapter.py  test_facts_and_calc.py  test_front_end.py  test_memory_reader.py  test_memory_search_and_ledger.py  test_session_and_journal.py  test_skill_reader.py
(+15 files in other folders)
